mod: modified the build steps

--- a/.github/workflows/BUILD.yml
+++ b/.github/workflows/BUILD.yml
@@ -3,11 +3,7 @@ name: Build App
 
 on:
   push:
-    branches:
-      - '*'    # Run on all branches
-  pull_request:
-    branches:
-      - '*'    # Run on PRs to any branch
+    branches: ['*']
 
 jobs:
   build:
