--- a/.github/workflows/BUILD.yml
+++ b/.github/workflows/BUILD.yml
@@ -2,8 +2,8 @@
 name: Build App
 
 on:
-  push:
-    branches: ['*']
+  push:        # Runs on push to any branch
+  pull_request: # Runs on PR to any branch
 
 jobs:
   build:
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '24'   # Specify Node.js version
+          node-version: '24'
 
       - name: Install Dependencies
         run: npm ci
