--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,10 @@
-your-domain.com {
-    reverse_proxy nextjs:3000
+# Caddyfile
+
+yourdomain.com {
+    reverse_proxy app:3000
+    encode gzip
+    log {
+        output file /var/log/caddy/access.log
+        format console
+    }
 }
