--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react-slick": "^0.23.13",
     "chart.js": "^4.5.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "leaflet": "^1.9.4",
     "next": "16.0.1",
     "react": "19.2.0",
