refactor: removed paddock view client, copied everything into page

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,10 +1,5 @@
-# Caddyfile
-
-yourdomain.com {
-    reverse_proxy app:3000
-    encode gzip
-    log {
-        output file /var/log/caddy/access.log
-        format console
-    }
+https://discovery-datafarm.com.au {
+    root * /srv
+    try_files {path} /index.html
+    file_server
 }
