--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 services:
   caddy:
-    image: caddy:2-alpine
+    build: .  # Build from Dockerfile
     container_name: caddy
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - ./out:/srv:ro
       - caddy_data:/data
       - caddy_config:/config
     restart: unless-stopped
