ci: added image field

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   caddy:
+    image: datafarm/discovery:latest
     build: .  # Build from Dockerfile
     container_name: caddy
     ports:
