--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -26,39 +26,39 @@ jobs:
       - name: Push Docker image
         run: docker compose push
 
-      # # SSH into Linode and deploy
-      # - name: Deploy on Linode
-      #   uses: appleboy/ssh-action@v0.1.10
-      #   with:
-      #     host: ${{ secrets.HOST }}
-      #     username: ${{ secrets.USER }}
-      #     key: ${{ secrets.SSH_KEY }}
-      #     port: ${{ secrets.PORT }}
-      #     script: |
-      #       # Stop & remove old containers
-      #       docker stop app || true
-      #       docker rm app || true
-      #       docker stop caddy || true
-      #       docker rm caddy || true
+      # SSH into Linode and deploy
+      - name: Deploy on Linode
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            # Stop & remove old containers
+            # docker stop app || true
+            # docker rm app || true
+            # docker stop caddy || true
+            # docker rm caddy || true
 
-      #       # Pull latest Next.js image
-      #       docker pull ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest
+            # Pull latest Next.js image
+            docker pull ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest
 
-      #       # Run Next.js container
-      #       docker run -d \
-      #         --name app \
-      #         -e NODE_ENV=production \
-      #         -p 3000:3000 \
-      #         ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest
+            # # Run Next.js container
+            # docker run -d \
+            #   --name app \
+            #   -e NODE_ENV=production \
+            #   -p 3000:3000 \
+            #   ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest
 
-      #       # Run Caddy container
-      #       docker run -d \
-      #         --name caddy \
-      #         -p 80:80 -p 443:443 \
-      #         -v caddy_data:/data \
-      #         -v caddy_config:/config \
-      #         -v /home/${{ secrets.USER }}/Caddyfile:/etc/caddy/Caddyfile \
-      #         --link app:app \
-      #         caddy:latest
+            # # Run Caddy container
+            # docker run -d \
+            #   --name caddy \
+            #   -p 80:80 -p 443:443 \
+            #   -v caddy_data:/data \
+            #   -v caddy_config:/config \
+            #   -v /home/${{ secrets.USER }}/Caddyfile:/etc/caddy/Caddyfile \
+            #   --link app:app \
+            #   caddy:latest
 
-      #       echo "Deployment completed successfully!"
+            # echo "Deployment completed successfully!"
