--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -33,32 +33,9 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.PORT }}
+          port: 5823
           script: |
-            # Stop & remove old containers
-            # docker stop app || true
-            # docker rm app || true
-            # docker stop caddy || true
-            # docker rm caddy || true
-
             # Pull latest Next.js image
             docker pull ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest
 
-            # # Run Next.js container
-            # docker run -d \
-            #   --name app \
-            #   -e NODE_ENV=production \
-            #   -p 3000:3000 \
-            #   ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest
-
-            # # Run Caddy container
-            # docker run -d \
-            #   --name caddy \
-            #   -p 80:80 -p 443:443 \
-            #   -v caddy_data:/data \
-            #   -v caddy_config:/config \
-            #   -v /home/${{ secrets.USER }}/Caddyfile:/etc/caddy/Caddyfile \
-            #   --link app:app \
-            #   caddy:latest
-
-            # echo "Deployment completed successfully!"
+            echo "Deployment completed successfully!"
