--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -20,7 +20,7 @@ jobs:
 
       # Build Docker image
       - name: Build Docker image
-        run: docker compose build
+        run: docker compose build --build-arg NEXT_PUBLIC_API_URL=https://api.example.com
 
       # Push Docker image
       - name: Push Docker image
@@ -39,7 +39,6 @@ jobs:
             docker pull ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest
 
             echo "Deployment completed successfully!"
-
 
             # Run the container in detached mode
             docker compose down --remove-orphans
