--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,4 @@
+# HTTPS server
 server {
     listen 443 ssl;
     server_name discovery-datafarm.com.au;
@@ -11,8 +12,12 @@ server {
     location / {
         try_files $uri /index.html;
     }
+}
 
-    # Optional: redirect HTTP to HTTPS
+# HTTP -> HTTPS redirect
+server {
     listen 80;
+    server_name discovery-datafarm.com.au;
+
     return 301 https://$host$request_uri;
 }
