--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -1,30 +1,74 @@
-name: Discovery Deployment
+name: Release Deployment
 
 on:
   push:
     branches:
-      - main
+      - release
 
 jobs:
-  deploy:
+  release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # ------------------------
+      # 1. Checkout code
+      # ------------------------
+      - name: Checkout repo
         uses: actions/checkout@v4
 
+      # ------------------------
+      # 2. Get latest tag
+      # ------------------------
+      - name: Get latest tag
+        id: get_tag
+        run: |
+          git fetch --tags
+          LATEST_TAG=$(git describe --tags --abbrev=0 || echo "v0.0.0")
+          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
+
+      # ------------------------
+      # 3. Bump version (patch)
+      # ------------------------
+      - name: Bump patch version
+        id: bump
+        run: |
+          IFS='.' read -r MAJOR MINOR PATCH <<< "${LATEST_TAG#v}"
+          PATCH=$((PATCH + 1))
+          NEW_TAG="v$MAJOR.$MINOR.$PATCH"
+          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+          echo "Bumped version to $NEW_TAG"
+
+      # ------------------------
+      # 4. Create and push new tag
+      # ------------------------
+      - name: Create new tag
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git tag $NEW_TAG
+          git push origin $NEW_TAG
+
+      # ------------------------
+      # 5. Log in to Docker Hub
+      # ------------------------
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_LOGIN_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_LOGIN_USERNAME }}" --password-stdin
 
-      # 3. Build Docker image with SSL keys
+      # ------------------------
+      # 6. Build Docker image
+      # ------------------------
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest .
 
-      # 4. Push Docker image to Docker Hub
+      # ------------------------
+      # 7. Push Docker image
+      # ------------------------
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:latest
 
-      # 5. Deploy on server
+      # ------------------------
+      # 8. Deploy on server
+      # ------------------------
       - name: SSH into server and deploy
         uses: appleboy/ssh-action@v0.1.10
         with:
