--- a/.github/workflows/DEPLOY-PROD.yml
+++ b/.github/workflows/DEPLOY-PROD.yml
@@ -18,7 +18,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_LOGIN_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_LOGIN_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:prod .
+        run: |
+          docker build \
+            --build-arg BACKEND_URL='${{ secrets.PROD_API_URL }}' \
+            -t ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:prod .
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:prod
@@ -43,8 +46,6 @@ jobs:
             docker run -d \
               -p 443:443 \
               --name discovery \
-              -e NEXT_PUBLIC_API_URL='${{ secrets.PROD_API_URL }}' \
-              -e BACKEND_URL='${{ secrets.PROD_API_URL }}' \
               ${{ secrets.DOCKER_LOGIN_USERNAME }}/discovery:prod
 
             echo "Deployment completed successfully!"
