mod: enhance HTTPS server configuration with TLS settings and HSTS

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,60 @@
+# # HTTPS server
+# server {
+#     listen 443 ssl;
+#     server_name discovery-datafarm.com.au;
+
+#     ssl_certificate     /etc/ssl/certs/fullchain.pem;
+#     ssl_certificate_key /etc/ssl/private/privkey.pem;
+
+#     root /usr/share/nginx/html;
+#     index index.html;
+
+#     location / {
+#         try_files $uri $uri/ $uri/index.html /index.html;
+#     }
+# }
+
+# # HTTP -> HTTPS redirect
+# server {
+#     listen 80;
+#     server_name discovery-datafarm.com.au;
+
+#     return 301 https://$host$request_uri;
+# }
+
+
 # HTTPS server
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name discovery-datafarm.com.au;
 
     ssl_certificate     /etc/ssl/certs/fullchain.pem;
     ssl_certificate_key /etc/ssl/private/privkey.pem;
+
+    # ---- TLS SETTINGS ----
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+
+    ssl_ciphers '
+        TLS_AES_256_GCM_SHA384:
+        TLS_AES_128_GCM_SHA256:
+        TLS_CHACHA20_POLY1305_SHA256:
+        ECDHE-ECDSA-AES256-GCM-SHA384:
+        ECDHE-RSA-AES256-GCM-SHA384:
+        ECDHE-ECDSA-CHACHA20-POLY1305:
+        ECDHE-RSA-CHACHA20-POLY1305:
+        ECDHE-ECDSA-AES128-GCM-SHA256:
+        ECDHE-RSA-AES128-GCM-SHA256
+    ';
+
+    # ---- HSTS (Recommended) ----
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
+    # ---- OCSP Stapling (Recommended) ----
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 8.8.8.8 valid=300s;
+    resolver_timeout 5s;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -18,6 +68,5 @@ server {
 server {
     listen 80;
     server_name discovery-datafarm.com.au;
-
     return 301 https://$host$request_uri;
 }
