--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,8 @@
 
 # HTTPS server
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name discovery-datafarm.com.au;
 
     ssl_certificate     /etc/ssl/certs/fullchain.pem;
@@ -33,28 +34,10 @@ server {
 
     # ---- TLS SETTINGS ----
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-
-    ssl_ciphers '
-        TLS_AES_256_GCM_SHA384:
-        TLS_AES_128_GCM_SHA256:
-        TLS_CHACHA20_POLY1305_SHA256:
-        ECDHE-ECDSA-AES256-GCM-SHA384:
-        ECDHE-RSA-AES256-GCM-SHA384:
-        ECDHE-ECDSA-CHACHA20-POLY1305:
-        ECDHE-RSA-CHACHA20-POLY1305:
-        ECDHE-ECDSA-AES128-GCM-SHA256:
-        ECDHE-RSA-AES128-GCM-SHA256
-    ';
+    ssl_prefer_server_ciphers off;
 
     # ---- HSTS (Recommended) ----
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-
-    # ---- OCSP Stapling (Recommended) ----
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 1.1.1.1 8.8.8.8 valid=300s;
-    resolver_timeout 5s;
 
     root /usr/share/nginx/html;
     index index.html;
