--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,10 @@ server {
 
     # ---- TLS SETTINGS ----
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+    ssl_ecdh_curve X25519:secp384r1:prime256v1;
+    ssl_session_tickets off;
 
     # ---- HSTS (Recommended) ----
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
