--- a/nginx.conf
+++ b/nginx.conf
@@ -48,6 +48,17 @@ server {
     location / {
         try_files $uri $uri/ $uri/index.html /index.html;
     }
+
+    location /api/ {
+        proxy_pass https://discovery-datafarm.com.au:8081/;
+        proxy_http_version 1.1;
+        proxy_set_header Host discovery-datafarm.com.au;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_ssl_server_name on;
+        proxy_ssl_name discovery-datafarm.com.au;
+    }
 }
 
 # HTTP -> HTTPS redirect
